Fix author box image on mobile issue

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -395,14 +395,21 @@ body:not(.single) .hentry {
 			width: 100px;
 			
 			@media (max-width: 480px) {
-				margin: 0 auto 15px;
+				height: 80px;
+				margin: 0 0 15px;
+				width: 80px;				
 			}			
 		}
 	}
 
 	.author-description {
 		display: table-cell;
-		vertical-align: top;		
+		vertical-align: top;
+		
+		@media (max-width: 480px) {
+			display: block;
+			width: 100%; 
+		}					
 	
 		h3 {
 			font-size: 15px;
