--- a/style.css
+++ b/style.css
@@ -1734,10 +1734,16 @@ body:not(.single) .hentry {
       width: 100px; }
       @media (max-width: 480px) {
         .author-box .author-avatar img {
-          margin: 0 auto 15px; } }
+          height: 80px;
+          margin: 0 0 15px;
+          width: 80px; } }
   .author-box .author-description {
     display: table-cell;
     vertical-align: top; }
+    @media (max-width: 480px) {
+      .author-box .author-description {
+        display: block;
+        width: 100%; } }
     .author-box .author-description h3 {
       font-size: 15px;
       font-weight: bold;
